[package]
name = "hub75-framebuffer"
description = "DMA-friendly Framebuffer implementation for HUB75 LED matrix displays"
repository = "https://github.com/liebman/hub75-framebuffer"
documentation = "https://docs.rs/hub75-framebuffer"
keywords = ["led-matrix", "hub75", "embedded", "framebuffer"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"
version = "0.1.0"
readme = "README.md"
authors = ["liebman <liebman@zod.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.86"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[profile.release]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[dependencies]
bitfield = { version = "0.19.1" }
defmt = { version = "1.0.1", optional = true }
embed-doc-image = { version = "0.1.4", optional = true }
embedded-dma = "0.2.0"
embedded-graphics = { version = "0.8.1" }
esp-hal = { version = "=1.0.0-beta.1", features = ["unstable"], optional = true }

[features]
default = []
skip-black-pixels = []
esp-dma = ["dep:esp-hal"]
esp32-ordering = []
esp32 = ["esp-hal/esp32", "esp-dma", "esp32-ordering"]
esp32s3 = ["esp-hal/esp32s3", "esp-dma"]
esp32c6 = ["esp-hal/esp32c6", "esp-dma"]
defmt = ["dep:defmt"]
doc-images = ["dep:embed-doc-image"]

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "set_pixel_latched"
harness = false

[[bench]]
name = "set_pixel_plain"
harness = false

[[bench]]
name = "clear_plain"
harness = false

[[bench]]
name = "clear_latched"
harness = false

[[bench]]
name = "fill_rect_plain"
harness = false

[[bench]]
name = "fill_rect_latched"
harness = false

[[bench]]
name = "render_text_plain"
harness = false

[[bench]]
name = "render_text_latched"
harness = false

[package.metadata.docs.rs]
features = ["doc-images"]
